--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~8.2.5",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
+    "http-server": "^0.12.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
